Fixes vertical align of asset table, e.g. in the Videos tab of War and Peace exhibit.

--- a/app/assets/stylesheets/override.css.scss
+++ b/app/assets/stylesheets/override.css.scss
@@ -10,4 +10,10 @@
       margin-right: 10px;
     }
   }
+
+  .asset-table {
+    td {
+      vertical-align: top;
+    }
+  }
 }
